# chart-im

./: .gitignore  CMakeLists.txt
src/: dataset.cpp  dataset.h  flowgraph.cpp  flowgraph.h  imconfig.h  main.cpp  sindataset.cpp  sindataset.h  timer.cpp  timer.h  utils.h  window.cpp  window.h
src/backends/: backend.cpp  backend.h
src/backends/glfw/: glfwbackend.cpp  glfwbackend.h
src/backends/sdl/: sdlbackend.cpp  sdlbackend.h
src/renderers/: renderer.cpp  renderer.h
src/renderers/opengl/: openglrenderer.cpp  openglrenderer.h
